--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -51,7 +51,9 @@ bind-key R source-file ~/.config/tmux/tmux.conf
 
 # panes (splits)
 bind-key v split-window -h
+bind-key V split-window -h -p 40
 bind-key s split-window -v
+bind-key S split-window -v -p 40
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -94,11 +96,10 @@ bind-key w kill-pane
 # custom commands
 bind-key Enter display-popup -E "tm"
 bind-key t run-shell "toggle-term"
-bind-key T display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "triangles && zsh"
 bind-key c run-shell "tmux display-popup -w '75%' -h '75%' -E tmux-cht"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && .lg)"
 bind-key p new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
-bind-key BSpace run-shell "[[ $(wmctrl -l | rg $(xprop -root _NET_ACTIVE_WINDOW | awk '{print $5}' | sed 's/0x//') | awk '{print $4}') == 'scratch' ]] && tm end scratch || tm end main"
+bind-key BSpace run-shell "[[ $(wmctrl -l | rg $(xprop -root _NET_ACTIVE_WINDOW | awk '{print $5}' | sed 's/0x//') | awk '{print $4}') == 'scratch' ]] && tm attach scratch || tm attach main; tm kill $(tmux display-message -p '#S')"
 bind-key \\ switch-client -l
 
 # Styles
