idk im getting pretty lazy with this. launch-browser, aesthetics, and who knows what else

--- a/global/dot-config/starship.toml
+++ b/global/dot-config/starship.toml
@@ -107,6 +107,12 @@ format = "[$symbol$version]($style) "
 symbol = "/ "
 format = "[$symbol$version]($style) "
 
+[rust]
+format = "[$symbol($version)]($style) "
+version_format = "${raw}"
+symbol = "🦀"
+style = "bold red"
+
 [package]
 disabled = true
 
