--- a/global/dot-config/jupyter/jupyter_nbconvert_config.json
+++ b/global/dot-config/jupyter/jupyter_nbconvert_config.json
@@ -5,7 +5,13 @@
       ".",
       "/home/ecal/.local/share/virtualenvs/nlp/lib/python3.9/site-packages/jupyter_contrib_nbextensions/templates",
       "/home/ecal/.local/share/virtualenvs/praxis/lib/python3.8/site-packages/jupyter_contrib_nbextensions/templates",
-      "/home/ecal/.local/share/virtualenvs/kaggle/lib/python3.10/site-packages/jupyter_contrib_nbextensions/templates"
+      "/home/ecal/.local/share/virtualenvs/kaggle/lib/python3.10/site-packages/jupyter_contrib_nbextensions/templates",
+      "/home/ecal/.local/share/virtualenvs/praxis-dash/lib/python3.9/site-packages/jupyter_contrib_nbextensions/templates",
+      "/home/ecal/.local/share/virtualenvs/praxis-interface/lib/python3.9/site-packages/jupyter_contrib_nbextensions/templates",
+      "/home/ecal/.local/share/virtualenvs/praxis-client/lib/python3.7/site-packages/jupyter_contrib_nbextensions/templates",
+      "/home/ecal/.local/share/virtualenvs/praxis-test/lib/python3.7/site-packages/jupyter_contrib_nbextensions/templates",
+      "/home/ecal/.local/share/virtualenvs/praxis-test-2/lib/python3.7/site-packages/jupyter_contrib_nbextensions/templates",
+      "/home/ecal/.local/share/virtualenvs/mulab/lib/python3.10/site-packages/jupyter_contrib_nbextensions/templates"
     ],
     "preprocessors": [
       "jupyter_contrib_nbextensions.nbconvert_support.CodeFoldingPreprocessor",
