--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -149,7 +149,7 @@ format-full = "<label-full> "
 format-full-prefix-font = 5
 format-full-foreground = ${color.green}
 
-format-discharging = "<ramp-capacity>  <label-discharging>"
+format-discharging = "%{A1:notify-send "$(acpi | awk '{printf $5}') remaining":}<ramp-capacity>  <label-discharging>%{A}"
 label-discharging = %percentage%%%{F-}
 ; Can't use variables in format strings
 ramp-capacity-0="%{F#F07178}"
@@ -216,8 +216,9 @@ format-foreground = ${color.aqua}
 type = internal/network
 interface = wlp59s0
 interval = 3.0
-format-connected = "<ramp-signal>"
+format-connected = "%{A1:notify-send $(iwgetid):}<ramp-signal>%{A}"
 label-connected = %essid%
+; label-connected = "%{A1:connman-gtk:} %essid%%{A}"
 label-disconnected = 󰤭
 label-disconnected-foreground = ${color.red}
 ramp-signal-0 = 󰤫
