--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -9,6 +9,8 @@ set -g base-index 1
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
+set-option -g renumber-windows on
+
 # watch for background window activity
 setw -g monitor-activity on
 set -g bell-action none
@@ -86,6 +88,9 @@ bind-key B break-pane -d
 
 bind-key -n S-Right next-window
 bind-key -n S-Left  previous-window
+
+bind-key C-h run-shell "tmux-swap-window left"
+bind-key C-l run-shell "tmux-swap-window right"
 # bind-key -n M-Tab if-shell "$is_vim" "send-keys M-Tab" "next-window"
 
 # kill
