--- a/global/dot-config/git/config
+++ b/global/dot-config/git/config
@@ -7,3 +7,8 @@
 	defaultBranch = main
 [alias]
     tree = log --graph --decorate --pretty=oneline --abbrev-commit
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
