--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -38,7 +38,8 @@ icon-3 = 4;
 icon-4 = 5;
 icon-5 = 6;
 icon-6 = 7;
-icon-7 = NSP;
+icon-7 = 8;
+icon-8 = NSP;
 icon-default = 
 
 label-active = %icon%
