Update raspi dotfiles

--- a/raspberrypi/.config/tmux/tmux.conf
+++ b/raspberrypi/.config/tmux/tmux.conf
@@ -9,6 +9,8 @@ set -g base-index 1
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
+set-option -g renumber-windows on
+
 # watch for background window activity
 setw -g monitor-activity on
 set -g bell-action none
@@ -51,11 +53,9 @@ bind-key R source-file ~/.config/tmux/tmux.conf
 
 # panes (splits)
 bind-key v split-window -h
+bind-key V split-window -h -p 40
 bind-key s split-window -v
-
-no_bot="tmux list-panes -F '#{pane_at_top} #{pane_at_bottom}' | grep -q '1 1'"
-is_zoomed="tmux list-panes -F '#F' | grep -q Z"
-bind-key t if-shell "$no_bot" ' if-shell "$is_zoomed" "resize-pane -Z" "split-window -v -p 30"' "resize-pane -Z"
+bind-key S split-window -v -p 40
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -83,10 +83,15 @@ bind-key C-k swap-pane -U
 # windows
 bind-key n new-window
 bind-key r command-prompt -I "#W" "rename-window '%%'"
+bind-key b break-pane
+bind-key B break-pane -d
 
 bind-key -n S-Right next-window
 bind-key -n S-Left  previous-window
-bind-key -n M-Tab if-shell "$is_vim" "send-keys M-Tab" "next-window"
+
+bind-key C-h run-shell "tmux-swap-window left"
+bind-key C-l run-shell "tmux-swap-window right"
+# bind-key -n M-Tab if-shell "$is_vim" "send-keys M-Tab" "next-window"
 
 # kill
 bind-key Q kill-session
@@ -95,10 +100,12 @@ bind-key w kill-pane
 
 # custom commands
 bind-key Enter display-popup -E "tm"
-bind-key p command-prompt -p "search from:" "split-window -h 'vs %%'"
-bind-key P command-prompt -p "search from:" "split-window -v 'vs %%'"
-bind-key e split-window -h "ve"
-bind-key E split-window -v "ve"
+bind-key t run-shell "toggle-term"
+bind-key c run-shell "tmux display-popup -w '75%' -h '75%' -E tmux-cht"
+bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && .lg)"
+bind-key p new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
+bind-key BSpace run-shell "[[ $(wmctrl -l | rg $(xprop -root _NET_ACTIVE_WINDOW | awk '{print $5}' | sed 's/0x//') | awk '{print $4}') == 'scratch' ]] && tm attach scratch || tm attach main; tm kill $(tmux display-message -p '#S')"
+bind-key \\ switch-client -l
 
 # Styles
 set -g status-bg black
@@ -106,8 +113,8 @@ set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-right-length 200
-set -g status-left '#[fg=black,bg=red]  #S #[fg=red,bg=black]#[default] '
-set -g status-right '#[fg=color8]#(tmux-song)#(tmux-battery)#[fg=color15]#[fg=red, bg=color15]  %a %b %d #[fg=red]#[fg=black, bg=red] %I:%M%p '
+set -g status-left '#[fg=black,bg=red] #(tmux-icon) #S #[fg=red,bg=black]#[default] '
+set -g status-right '#[fg=color8]#(tmux-song)#(tmux-battery)#[fg=color15]#[fg=red, bg=color15]  %a %b %d #[fg=red]#[fg=black, bg=red]  %H:%M '
 
 setw -g window-status-style fg='color8',bg='color15'
 setw -g window-status-activity-style fg='orange blink',bg='colour15'
