Click date -> google calendar

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -248,29 +248,12 @@ label-packetloss = 
 format-packetloss-foreground = ${color.yellow}
 format-connected-foreground = ${color.green}
 
-[module/clock]
-type = internal/date
-interval = 5
-time =    %I:%M %p
-time-alt =    %a %b %e
-label = %time%
-format-foreground = ${color.blue}
-
-[module/date-time]
-type = internal/date
-interval = 5
-time =    %I:%M %p
-date =    %a %b %e
-label = %date%      %time%
-format-foreground = ${color.blue}
-
 [module/date]
-type = internal/date
-interval = 5
-date =    %a %b %e
-date-alt =    %D
-label = %date%
+type = custom/script
+interval = 7200
+exec = date +"    %a %b %e"
 format-foreground = ${color.blue}
+click-left = open "https://calendar.google.com"
 
 [module/time]
 type = internal/date
