[wip] fixing gaius top bar

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -60,7 +60,7 @@ offset-x = 0.25%
 offset-y = 5px
 modules-left = workspaces
 modules-center = media-icon now-playing prev-song play-pause next-song
-modules-right = cpu spacer memory spacer volume spacer brightness spacer ethernet spacer clock spacer powermenu
+modules-right = cpu spacer memory spacer volume spacer time spacer date spacer powermenu
 
 [bar/workspaces]
 inherit = bar/base
