desktop visual fixes

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -39,6 +39,7 @@ module-margin-left = 2
 module-margin-right = 2
 
 ; font-N = <fontconfig pattern>;<vertical offset>
+; 1-indexed in modules
 font-0 = BreezeSans:pixelsize=12:style=Medium Condensed;4
 font-1 = JetBrains Mono Nerd Font:size=14:style=Regular;5
 font-2 = BreezeSans:pixelsize=10:style=Bold Condensed;3
@@ -58,9 +59,9 @@ width = 99.5%
 height = 40
 offset-x = 0.25%
 offset-y = 5px
-modules-left = workspaces
+modules-left = spacer workspaces
 modules-center = media-icon now-playing prev-song play-pause next-song
-modules-right = cpu spacer memory spacer volume spacer time spacer date spacer powermenu
+modules-right = cpu spacer memory spacer volume spacer time spacer date spacer powermenu spacer
 
 [bar/workspaces]
 inherit = bar/base
