--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -26,6 +26,7 @@ label = %title:0:30:...%
 [module/workspaces]
 type = internal/xworkspaces
 enable-scroll = false
+ignore-viewport = true
 
 format = <label-state>
 format-font = 6
@@ -265,8 +266,9 @@ format-foreground = ${color.pink}
 
 [module/powermenu]
 type = custom/text
-content = 󰐥
-content-foreground = ${color.red}
+format-font = 8
+format = 󰐥
+format-foreground = ${color.red}
 click-left = ~/.config/polybar/scripts/powermenu
 
 [module/ticker]
