--- a/global/dot-config/kitty/kitty.conf
+++ b/global/dot-config/kitty/kitty.conf
@@ -13,10 +13,10 @@ window_padding_width 0 0.5 0 0.5
 
 # font_family             Fira Code Retina Nerd Font Complete
 # bold_font               Fira Code Bold Nerd Font Complete
-font_family             JetBrains Mono Regular Nerd Font Complete
-bold_font               JetBrains Mono Bold Nerd Font Complete
-italic_font             JetBrains Mono Italic Nerd Font Complete
-bold_italic_font        JetBrains Mono Bold Italic Nerd Font Complete
+font_family             JetBrains Mono Nerd Font Complete Regular
+bold_font               JetBrains Mono Nerd Font Complete Bold
+italic_font             JetBrains Mono Nerd Font Complete Italic
+bold_italic_font        JetBrains Mono Nerd Font Complete Bold Italic
 
 font_size               12.5
 disable_ligatures       never
