--- a/global/dot-config/picom/picom.conf
+++ b/global/dot-config/picom/picom.conf
@@ -151,7 +151,7 @@ fade-exclude = [
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 1.0;
+inactive-opacity = 0.8;
 # inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
@@ -165,14 +165,14 @@ popup_menu = { opacity = 1.0; }
 dropdown_menu = { opacity = 1.0; }
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
-inactive-opacity-override = true;
-# inactive-opacity-override = false;
+inactive-opacity-override = false;
+# inactive-opacity-override = true;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-inactive-dim = 1.0
+inactive-dim = 0.8
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
