--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -100,7 +100,7 @@ click-left = playerctl -p spotify next
 [module/cpu]
 type = internal/cpu
 interval = 2
-format =     <label>
+format = 󰧑    <label>
 format-foreground = ${color.pink}
 ramp-load-8 = █
 ramp-load-7 = ▇
