Central cfgdirs script for config menus

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -101,9 +101,11 @@ bind-key w kill-pane
 # custom commands
 bind-key Enter display-popup -E "tm"
 bind-key t run-shell "toggle-term"
-bind-key c run-shell "tmux display-popup -w '75%' -h '75%' -E tmux-cht"
+bind-key ? run-shell "tmux display-popup -w '75%' -h '75%' -E tmux-cht"
+bind-key . run-shell "tmux display-popup -E cfgdirs --tmux"
+bind-key > run-shell "tmux display-popup -E cfgdirs --tmux --file"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && .lg)"
-bind-key p new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
+bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
 bind-key BSpace run-shell "[[ $(wmctrl -l | rg $(xprop -root _NET_ACTIVE_WINDOW | awk '{print $5}' | sed 's/0x//') | awk '{print $4}') == 'scratch' ]] && tm attach scratch || tm attach main; tm kill $(tmux display-message -p '#S')"
 bind-key \\ switch-client -l
 
