Only allow bt to run if bluetoothctl isn't actively running

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -52,10 +52,10 @@ bind-key -T copy-mode-vi Y send-keys -X copy-line
 bind-key R source-file ~/.config/tmux/tmux.conf
 
 # panes (splits)
-bind-key v split-window -h
-bind-key V split-window -h -p 40
-bind-key s split-window -v
-bind-key S split-window -v -p 40
+bind-key V split-window -h
+bind-key v split-window -h -p 40
+bind-key S split-window -v
+bind-key s split-window -v -p 40
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
