--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -91,7 +91,6 @@ bind-key -n S-Left  previous-window
 
 bind-key C-h run-shell "tmux-swap-window left"
 bind-key C-l run-shell "tmux-swap-window right"
-# bind-key -n M-Tab if-shell "$is_vim" "send-keys M-Tab" "next-window"
 
 # kill
 bind-key Q kill-session
@@ -109,7 +108,11 @@ bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi
 bind-key BSpace run-shell "[[ $(wmctrl -l | rg $(xprop -root _NET_ACTIVE_WINDOW | awk '{print $5}' | sed 's/0x//') | awk '{print $4}') == 'scratch' ]] && tm attach scratch || tm attach main; tm kill $(tmux display-message -p '#S')"
 bind-key \\ switch-client -l
 
+# toggle status bar
+bind-key C-f if-shell "[[ `tmux show-option -gqv status` == on ]]" "set-option -g status off" "set-option -g status on"
+
 # Styles
+set -g status off
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 60
