Default tmux status bar on

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -112,7 +112,7 @@ bind-key \\ switch-client -l
 bind-key C-f if-shell "[[ `tmux show-option -gqv status` == on ]]" "set-option -g status off" "set-option -g status on"
 
 # Styles
-set -g status off
+set -g status on
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 60
