Polybar: no sync on shutdown and use cron calendar

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -254,7 +254,7 @@ type = custom/script
 interval = 7200
 exec = date +"    %a %b %e"
 format-foreground = ${color.blue}
-click-left = open "https://calendar.google.com"
+click-left = open "https://calendar.cron.com"
 
 [module/time]
 type = internal/date
