scripts: add ask

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -100,7 +100,8 @@ bind-key w kill-pane
 # custom commands
 bind-key Enter display-popup -E "tm"
 bind-key t run-shell "toggle-term"
-bind-key ? run-shell "tmux display-popup -w '75%' -h '75%' -E tmux-cht"
+bind-key ? run-shell "tmux-ask"
+bind-key / run-shell "tmux-ask"
 bind-key . run-shell "tmux display-popup -E cfgdirs --tmux"
 bind-key > run-shell "tmux display-popup -E cfgdirs --tmux --file"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && .lg)"
