polybar: add weather

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -276,3 +276,11 @@ type = custom/script
 exec = ~/.config/polybar/scripts/ticker-scroll
 tail = true
 format = <label>
+
+[module/weather]
+type = custom/ipc
+hook-0 = ~/.config/polybar/scripts/weather temp
+hook-1 = ~/.config/polybar/scripts/weather feel
+initial = 1
+format-foreground = ${color.orange}
+click-left = ~/.config/polybar/scripts/weather toggle &
