--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -52,6 +52,7 @@ font-6 = Material Design Icons Desktop:pixelsize=18;6
 font-7 = Material Design Icons Desktop:pixelsize=18;4
 ; separator
 font-8 = JetBrains Mono Nerd Font:size=10:style=Regular;0
+font-9 = Noto Emoji:scale=10;4
 
 [bar/top]
 inherit = bar/base
@@ -79,8 +80,8 @@ modules-center = media-icon now-playing prev-song play-pause next-song
 
 [bar/sys]
 inherit = bar/base
-width = 260
-offset-x = 100%:-480
+width = 255
+offset-x = 100%:-530
 offset-y = 0px
 module-margin-left = 2.5
 module-margin-right = 3
@@ -88,12 +89,13 @@ modules-center = volume brightness battery wifi
 
 [bar/clock]
 inherit = bar/base
-width = 200
-offset-x = 100%:-205
+width = 265
+offset-x = 100%:-270
 offset-y = 0px
+enable-ipc = true
 module-margin-left = 2.5
 module-margin-right = 3
-modules-center = date time
+modules-center = weather date time
 
 [bar/tickerbar]
 inherit = bar/base
