polybar: tweak battery colors

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -154,9 +154,15 @@ format-full-foreground = ${color.green}
 format-discharging = "%{A1:notify-send "$(acpi | awk '{printf $5}') remaining":}<ramp-capacity>  <label-discharging>%{A}"
 label-discharging = %percentage%%%{F-}
 ; Can't use variables in format strings
+; red: #F07178
+; orange: #FFA570
+; yellow: #FFCB6B
+; green: #B3E1A3
 ramp-capacity-0="%{F#F07178}"
-ramp-capacity-1="%{F#FFA570}"
-ramp-capacity-2="%{F#FFCB6B}"
+; ramp-capacity-1="%{F#FFA570}"
+ramp-capacity-1="%{F#FFCB6B}"
+; ramp-capacity-2="%{F#FFCB6B}"
+ramp-capacity-2="%{F#B3E1A3}"
 ramp-capacity-3="%{F#B3E1A3}"
 ramp-capacity-4="%{F#B3E1A3}"
 ramp-capacity-5="%{F#B3E1A3}"
@@ -284,3 +290,4 @@ hook-1 = ~/.config/polybar/scripts/weather feel
 initial = 1
 format-foreground = ${color.orange}
 click-left = ~/.config/polybar/scripts/weather toggle &
+click-right = open "https://www.google.com/search?q=weather" &
