polybar: handle weather without internet

--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -287,7 +287,8 @@ format = <label>
 type = custom/ipc
 hook-0 = ~/.config/polybar/scripts/weather temp
 hook-1 = ~/.config/polybar/scripts/weather feel
-initial = 1
+hook-2 = ~/.config/polybar/scripts/weather start
+initial = 3
 format-foreground = ${color.orange}
 click-left = ~/.config/polybar/scripts/weather toggle &
 click-right = open "https://www.google.com/search?q=weather" &
