tmux: overhaul theme

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -110,24 +110,27 @@ bind-key BSpace run-shell "[[ $(wmctrl -l | rg $(xprop -root _NET_ACTIVE_WINDOW 
 bind-key \\ switch-client -l
 
 # toggle status bar
-bind-key C-f if-shell "[[ `tmux show-option -gqv status` == on ]]" "set-option -g status off" "set-option -g status on"
+bind-key f if-shell "[[ `tmux show-option -qv status` != on ]]" "set-option status off" "set-option status on"
 
-# Styles
-set -g status on
-set -g status-bg black
-set -g status-fg white
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-right-length 200
-set -g status-left '#[fg=black,bg=cyan] #(tmux-icon) #S #[fg=cyan,bg=black]#[default] '
-set -g status-right '#[fg=color8]#(tmux-song)#(tmux-battery)#[fg=color15]#[fg=cyan, bg=color15]  %a %b %d #[fg=cyan]#[fg=black, bg=cyan]  %H:%M '
 
-setw -g window-status-style fg='color8',bg='color15'
-setw -g window-status-activity-style fg='orange blink',bg='colour15'
-setw -g window-status-current-style fg='cyan',bg='colour15'
-setw -g window-status-separator ' '
-setw -g window-status-format '#[fg=colour237,bg=black]#[default]#W#[fg=colour237,bg=black]'
-setw -g window-status-current-format '#[fg=color15,bg=black]#[default]#W#[fg=colour15,bg=black]'
+# set -g status on
+# set -g status-bg black
+# set -g status-fg white
+# set -g status-interval 60
+# set -g status-left-length 30
+# set -g status-right-length 200
+# set -g status-left '#[fg=black,bg=cyan]  #S #[fg=cyan,bg=black]#[default] '
+# set -g status-right '#[fg=color8]#(tmux-song)#(tmux-battery)#[fg=color15]#[fg=cyan, bg=color15]  %a %b %d #[fg=cyan]#[fg=black, bg=cyan]  %H:%M '
 
-set-option -ga pane-active-border-style bg=default,fg=color8
-set-option -ga pane-border-style bg=default,fg=color8
+# setw -g window-status-style fg='color8',bg='color15'
+# setw -g window-status-activity-style fg='orange blink',bg='colour15'
+# setw -g window-status-current-style fg='cyan',bg='colour15'
+# setw -g window-status-separator ''
+# setw -g window-status-format '#[fg=colour237,bg=black]█#[default]#W#[fg=colour237,bg=black]█'
+# setw -g window-status-current-format '#[fg=color15,bg=black]█#[default]#W#[fg=colour15,bg=black]█'
+
+# set-option -ga pane-active-border-style bg=default,fg=color8
+# set-option -ga pane-border-style bg=default,fg=color8
+
+
+run "$HOME/.config/tmux/theme"
