kitty/tmux: tweak colors

--- a/global/dot-config/kitty/kitty.conf
+++ b/global/dot-config/kitty/kitty.conf
@@ -70,11 +70,9 @@ mouse_map ctrl+shift+left press ungrabbed mouse_selection rectangle
 ## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
-
-
 # The basic colors
 foreground              #CDD6F4
-background              #1E1E2E
+background              #171724
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
 
