--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -88,6 +88,18 @@ bind-key B break-pane -d
 
 bind-key -n S-Right next-window
 bind-key -n S-Left  previous-window
+bind-key Tab next-window
+
+bind-key "+" select-window -t 1
+bind-key "[" select-window -t 2
+bind-key "{" select-window -t 3
+bind-key "(" select-window -t 4
+bind-key "&" select-window -t 5
+bind-key "=" select-window -t 6
+bind-key ")" select-window -t 7
+bind-key "}" select-window -t 8
+bind-key "]" select-window -t 9
+bind-key "*" select-window -t 10
 
 bind-key C-h run-shell "tmux-swap-window left"
 bind-key C-l run-shell "tmux-swap-window right"
