polybar: switch to catppuccin colors

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -28,8 +28,8 @@ enable-ipc = true
 
 cursor-click = pointer
 
-background = ${color.bg}
-foreground = ${color.fg}
+background = ${colors.base}
+foreground = ${colors.text}
 
 radius = 15
 fixed-center = true
@@ -73,10 +73,10 @@ modules-center = workspaces
 
 [bar/music]
 inherit = bar/base
-width = 40%
-offset-x = 30%
+width = 30%
+offset-x = 35%
 offset-y = 0px
-modules-center = media-icon now-playing prev-song play-pause next-song
+modules-center = media-icon now-playing spacer prev-song play-pause next-song 
 
 [bar/sys]
 inherit = bar/base
@@ -85,7 +85,7 @@ offset-x = 100%:-530
 offset-y = 0px
 module-margin-left = 2.5
 module-margin-right = 3
-modules-center = volume brightness battery wifi
+modules-center = volume backlight battery wifi
 
 [bar/clock]
 inherit = bar/base
