--- a/global/dot-config/polybar/modules.ini
+++ b/global/dot-config/polybar/modules.ini
@@ -2,7 +2,7 @@
 type = custom/text
 content = "▕  "
 content-font = 9
-content-foreground = ${color.grey2}
+content-foreground = ${colors.surface0}
 
 [module/spacer]
 type = custom/text
@@ -11,7 +11,7 @@ content = " "
 [module/search]
 type = custom/text
 content = "  "
-content-foreground = ${color.fg}
+content-foreground = ${colors.text}
 click-left = ~/.config/polybar/scripts/search &
 
 [module/xmonad-log]
@@ -51,16 +51,16 @@ label-empty-padding = 1
 label-active-padding = 1
 label-urgent-padding = 1
 label-occupied-padding = 1
-label-empty-foreground = ${color.grey}
-label-active-foreground = ${color.cyan}
-label-urgent-foreground = ${color.orange}
-label-occupied-foreground = ${color.light-cyan}
+label-empty-foreground = ${colors.surface0}
+label-active-foreground = ${colors.peach}
+label-urgent-foreground = ${colors.yellow}
+label-occupied-foreground = ${colors.rosewater}
 
 [module/media-icon]
 type = custom/script
 tail = true
 format = <label>
-format-foreground = ${color.pink}
+format-foreground = ${colors.maroon}
 exec = get-song icon
 click-left = focus-spotify
 interval = 5
@@ -69,7 +69,7 @@ interval = 5
 type = custom/script
 tail = true
 format = <label>
-format-foreground = ${color.light-pink}
+format-foreground = ${colors.rosewater}
 exec = get-song noicon
 click-left = focus-spotify
 interval = 5
@@ -78,7 +78,7 @@ interval = 5
 type = custom/text
 content = 玲
 content-font = 5
-content-foreground = ${color.light-pink}
+content-foreground = ${colors.flamingo}
 click-left = playerctl -p spotify previous
 
 [module/play-pause]
@@ -86,7 +86,7 @@ type = custom/ipc
 hook-0 = echo ""
 hook-1 = echo "契"
 format-font = 5
-format-foreground = ${color.pink}
+format-foreground = ${colors.maroon}
 initial = 2
 click-left = ~/.config/polybar/scripts/play-pause
 
@@ -94,14 +94,14 @@ click-left = ~/.config/polybar/scripts/play-pause
 type = custom/text
 content = 怜
 content-font = 5
-content-foreground = ${color.light-pink}
+content-foreground = ${colors.flamingo}
 click-left = playerctl -p spotify next
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format = 󰧑    <label>
-format-foreground = ${color.pink}
+format-foreground = ${colors.pink}
 ramp-load-8 = █
 ramp-load-7 = ▇
 ramp-load-6 = ▆
@@ -111,14 +111,14 @@ ramp-load-3 = ▃
 ramp-load-2 = ▂
 ramp-load-1 = ▁
 ramp-load-0 = "         "
-format-prefix-foreground = ${color.fg}
+format-prefix-foreground = ${colors.fg}
 label = %percentage%%
 
 [module/memory]
 type = internal/memory
 interval = 2
 format =    <label>
-format-foreground = ${color.cyan}
+format-foreground = ${colors.cyan}
 ramp-used-8 = █
 ramp-used-7 = ▇
 ramp-used-6 = ▆
@@ -135,7 +135,7 @@ type = internal/battery
 battery = BAT0
 adapter = ADP1
 
-format-charging-foreground = ${color.green}
+format-charging-foreground = ${colors.green}
 format-charging = "<animation-charging>  <label-charging>"
 animation-charging-0=""
 animation-charging-1=""
@@ -149,64 +149,54 @@ animation-charging-font = 4
 format-full-prefix = " "
 format-full = "<label-full> "
 format-full-prefix-font = 5
-format-full-foreground = ${color.green}
+format-full-foreground = ${colors.green}
 
 format-discharging = "%{A1:notify-send "$(acpi | awk '{printf $5}') remaining":}<ramp-capacity>  <label-discharging>%{A}"
 label-discharging = %percentage%%%{F-}
 ; Can't use variables in format strings
-; red: #F07178
-; orange: #FFA570
-; yellow: #FFCB6B
-; green: #B3E1A3
-ramp-capacity-0="%{F#F07178}"
-; ramp-capacity-1="%{F#FFA570}"
-ramp-capacity-1="%{F#FFCB6B}"
-; ramp-capacity-2="%{F#FFCB6B}"
-ramp-capacity-2="%{F#B3E1A3}"
-ramp-capacity-3="%{F#B3E1A3}"
-ramp-capacity-4="%{F#B3E1A3}"
-ramp-capacity-5="%{F#B3E1A3}"
-ramp-capacity-6="%{F#B3E1A3}"
-ramp-capacity-7="%{F#B3E1A3}"
-ramp-capacity-8="%{F#B3E1A3}"
-ramp-capacity-9="%{F#B3E1A3}"
-ramp-capacity-10="%{F#B3E1A3}"
+; need format strings to make icon and label the same color
+; red: #f38ba8
+; orange: #fab387
+; yellow: #f9e2af
+; green: #a6e3a1
+; red
+ramp-capacity-0="%{F#f38ba8}"
+; yellow
+ramp-capacity-1="%{F#f9e2af}"
+; green
+ramp-capacity-2="%{F#a6e3a1}"
+ramp-capacity-3="%{F#a6e3a1}"
+ramp-capacity-4="%{F#a6e3a1}"
+ramp-capacity-5="%{F#a6e3a1}"
+ramp-capacity-6="%{F#a6e3a1}"
+ramp-capacity-7="%{F#a6e3a1}"
+ramp-capacity-8="%{F#a6e3a1}"
+ramp-capacity-9="%{F#a6e3a1}"
+ramp-capacity-10="%{F#a6e3a1}"
 ramp-capacity-font = 5
-
-[module/volume-default]
-type = internal/pulseaudio
-use-ui-max = false
-format-volume = "<ramp-volume> <label-volume>"
-ramp-volume-0 = 󰕿
-ramp-volume-1 = 󰖀
-ramp-volume-2 = 󰕾
-ramp-volume-3 = "   "
-format-volume-foreground = ${color.purple}
-label-volume-foreground = ${color.purple}
-label-muted = "󰸈 "
-format-muted-foreground = ${color.purple}
-click-right = pavucontrol &
 
 [module/volume]
 type = custom/ipc
 hook-0 = ~/.config/polybar/scripts/pulseaudio
 initial = 1
 tail = true
-format-foreground = ${color.orange}
+format-foreground = ${colors.teal}
 scroll-up = ~/.config/polybar/scripts/pulseaudio up &
 scroll-down = ~/.config/polybar/scripts/pulseaudio down &
 click-left = ~/.config/polybar/scripts/pulseaudio mute &
 click-right = exec pavucontrol &
 
+; use to send notification
 [module/brightness]
 type = custom/ipc
 hook-0 = ~/.config/polybar/scripts/brightness
 initial = 1
 tail = true
-format-foreground = ${color.aqua}
+format-foreground = ${colors.yellow}
 scroll-up = ~/.config/polybar/scripts/brightness up &
 scroll-down = ~/.config/polybar/scripts/brightness down &
 
+; more responsive
 [module/backlight]
 type = internal/xbacklight
 card = intel_backlight
@@ -218,7 +208,7 @@ ramp-3 = 
 ramp-4 = 
 ramp-5 = 
 format = "<ramp>   <label>"
-format-foreground = ${color.aqua}
+format-foreground = ${colors.yellow}
 
 [module/wifi]
 type = internal/network
@@ -228,15 +218,15 @@ format-connected = "%{A1:notify-send $(iwgetid):}<ramp-signal>%{A}"
 label-connected = %essid%
 ; label-connected = "%{A1:connman-gtk:} %essid%%{A}"
 label-disconnected = 󰤭
-label-disconnected-foreground = ${color.red}
+label-disconnected-foreground = ${colors.red}
 ramp-signal-0 = 󰤫
 ramp-signal-1 = 󰤟
 ramp-signal-2 = 󰤢
 ramp-signal-3 = 󰤥
 ramp-signal-4 = 󰤨
-ramp-signal-0-foreground = ${color.red}
-ramp-signal-1-foreground = ${color.yellow}
-ramp-signal-foreground = ${color.purple}
+ramp-signal-0-foreground = ${colors.red}
+ramp-signal-1-foreground = ${colors.peach}
+ramp-signal-foreground = ${colors.mauve}
 ramp-signal-font = 8
 
 [module/ethernet]
@@ -250,16 +240,26 @@ format-disconnected = <label-disconnected>
 format-packetloss = <label-packetloss>
 label-connected = 
 label-disconnected = 
-label-disconnected-foreground = ${color.red}
+label-disconnected-foreground = ${colors.red}
 label-packetloss = 
-format-packetloss-foreground = ${color.yellow}
-format-connected-foreground = ${color.green}
+format-packetloss-foreground = ${colors.peach}
+format-connected-foreground = ${colors.mauve}
+
+[module/weather]
+type = custom/ipc
+hook-0 = ~/.config/polybar/scripts/weather temp
+hook-1 = ~/.config/polybar/scripts/weather feel
+hook-2 = ~/.config/polybar/scripts/weather start
+initial = 3
+format-foreground = ${colors.peach}
+click-left = ~/.config/polybar/scripts/weather toggle &
+click-right = notify-send "$(~/.config/polybar/scripts/weather --stat)"
 
 [module/date]
 type = custom/script
 interval = 7200
 exec = date +"    %a %b %e"
-format-foreground = ${color.blue}
+format-foreground = ${colors.lavender}
 click-left = open "https://calendar.cron.com"
 
 [module/time]
@@ -268,7 +268,7 @@ interval = 5
 time =    %H:%M
 time-alt =    %I:%M%P
 label = %time%
-format-foreground = ${color.pink}
+format-foreground = ${colors.maroon}
 
 [module/powermenu]
 type = custom/text
@@ -282,13 +282,3 @@ type = custom/script
 exec = ~/.config/polybar/scripts/ticker-scroll
 tail = true
 format = <label>
-
-[module/weather]
-type = custom/ipc
-hook-0 = ~/.config/polybar/scripts/weather temp
-hook-1 = ~/.config/polybar/scripts/weather feel
-hook-2 = ~/.config/polybar/scripts/weather start
-initial = 3
-format-foreground = ${color.orange}
-click-left = ~/.config/polybar/scripts/weather toggle &
-click-right = open "https://www.google.com/search?q=weather" &
