--- a/global/dot-config/polybar/colors.ini
+++ b/global/dot-config/polybar/colors.ini
@@ -1,25 +1,65 @@
-[color]
+[colors]
 ; First pair is alpha
 
-bg = #212121
-invis = #00000000
-fg = #eeeeee
-grey = #55ffffff
+; old
+; bg = #212121
+; invis = #00000000
+; fg = #eeeeee
+; grey = #55ffffff
+; 
+; red = #f07178
+; green = #b3e1a3
+; yellow = #ffcb6b
+; blue = #a4b9ef
+; light-blue = #c9d4ef
+; dark-blue = #7495e7
+; purple = #c6aae8
+; ; pink = #d3869b
+; pink = #df8589
+; light-pink = #ffd5cd
+; aqua = #9edccf
+; light-cyan = #c6e5df
+; cyan = #4ec9b0
+; orange = #ffa570
+; 
+; grey2 = #8e8c9c
 
-red = #F07178
-green = #B3E1A3
-yellow = #FFCB6B
-blue = #A4B9EF
-light-blue = #C9D4EF
-dark-blue = #7495E7
-purple = #C6AAE8
-; pink = #d3869b
-pink = #DF8589
-light-pink = #ffd5cd
-aqua = #9EDCCF
-light-cyan = #C6E5DF
-cyan = #4EC9B0
-orange = #FFA570
+;-------------------------
+; Catppuccin Mocha Palette
+; Maintainer: justTOBBI
+;--------------------------
 
-grey2 = #8E8C9C
+[colors]
+ base = #1e1e2e
+ mantle = #181825
+ crust = #11111b
 
+ text = #cdd6f4
+ subtext0 = #a6adc8
+ subtext1 = #bac2de
+
+ surface0 = #313244
+ surface1 = #45475a
+ surface2 = #585b70
+ 
+ overlay0 = #6c7086
+ overlay1 = #7f849c
+ overlay2 = #9399b2
+ 
+
+ blue = #89b4fa
+ sapphire = #74c7ec
+ sky = #89dceb
+ teal = #94e2d5
+ green = #a6e3a1
+ yellow = #eed49f
+ peach = #fab387
+ maroon = #eba0ac
+ red = #f38ba8
+ lavender = #b4befe
+ mauve = #cba6f7
+ pink = #f5c2e7
+ flamingo = #f2cdcd
+ rosewater = #f5e0dc
+
+ transparent = #FF00000
