kitty: tweak colors

--- a/global/dot-config/kitty/kitty.conf
+++ b/global/dot-config/kitty/kitty.conf
@@ -121,9 +121,9 @@ color9 #F38BA8
 color2  #A6E3A1
 color10 #A6E3A1
 
-# yellow
-color3  #F9E2AF
-color11 #F9E2AF
+# yellow (macchiato)
+color3  #EED49F
+color11 #EED49F
 
 # blue
 color4  #89B4FA
@@ -133,9 +133,9 @@ color12 #89B4FA
 color5  #F5C2E7
 color13 #F5C2E7
 
-# cyan
-color6  #94E2D5
-color14 #94E2D5
+# cyan (macchiato)
+color6  #8BD5CA
+color14 #8BD5CA
 
 # white
 color7  #BAC2DE
