eww dashboard: fix for wayland

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -14,7 +14,8 @@ bind = $mod, c, exec, hyprpicker -a
 bind = $mod, semicolon, exec, toggle-kbd-layout
 
 bind = $mod, q, killactive, 
-bindr = CONTROL ALT, Delete, exit, 
+# bindr = CONTROL ALT, Delete, exit, 
+bindr = CONTROL ALT, Delete, exec, eww -c ~/.config/eww/bar close bar; launch_dashboard
 # ==============================================================================
 
 # ------------------------------------------------------------------------------
