hypr: fix firefox-scratch

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -202,14 +202,15 @@ submap=reset
 # ------------------------------------------------------------------------------
 #                       Special workspaces (Scratchpads)
 # ------------------------------------------------------------------------------
-bind = $mod, backslash, exec , [workspace special:scratch]tm startup scratch
+bind = $mod, backslash, exec, [workspace special:scratch]tm startup scratch
 bindr = $mod, backslash, togglespecialworkspace, scratch
 
-bind = $mod CONTROL, backslash, exec , [workspace special:ask]tm startup ask
-bindr = $mod CONTROL, backslash, togglespecialworkspace, ask
-
-bind = $mod SHIFT, backslash, exec , [noanim; workspace special:browser]firefox-scratch
+bind = $mod SHIFT, backslash, exec, [noanim; workspace special:browser]firefox-scratch
 bindr = $mod SHIFT, backslash, togglespecialworkspace, browser
+
+# bind = $mod CONTROL, backslash, exec , [workspace special:ask]tm startup ask
+bind = $mod CONTROL, backslash, exec, [noanim; workspace special:ask]firefox-scratch ask
+bindr = $mod CONTROL, backslash, togglespecialworkspace, ask
 # ==============================================================================
 
 # ------------------------------------------------------------------------------
