hypr: use zoom web

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -13,6 +13,8 @@ bind = $mod, c, exec, hyprpicker -a
 
 bind = $mod, semicolon, exec, toggle-kbd-layout
 
+bind = $mod SHIFT, g, exec, firefox "https://github.com/e-cal"
+
 bind = $mod, q, killactive, 
 # bindr = CONTROL ALT, Delete, exit, 
 bindr = CONTROL ALT, Delete, exec, eww -c ~/.config/eww/bar close bar; launch_dashboard
@@ -75,9 +77,11 @@ bind=$mod CONTROL, c, submap, comm
 submap=comm
 # apps
 bind=,s,exec,slack
-bind=,t,exec,teams
+# bind=,t,exec,teams
+bind=,t,exec,[workspace 4]firefox --new-window "https://teams.microsoft.com"
 bind=,d,exec,discord
-bind=,z,exec,zoom
+# bind=,z,exec,zoom
+bind=,z,exec,[workspace 4]firefox --new-window "https://zoom.us/meeting"
 # exit
 bind=,s,submap,reset
 bind=,t,submap,reset
