--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -1,5 +1,5 @@
 # Floating
-windowrulev2 = opacity 1 0.05,floating:1
+# windowrulev2 = opacity 1 0.05,floating:1
 
 # Comms
 windowrule=workspace 4,Microsoft Teams - Preview
