--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -147,6 +147,28 @@ bind = $mod SHIFT, K, resizeactive, 0 -30
 bind = $mod SHIFT, J, resizeactive, 0 30
 
 # Workspaces
+# bind = $mod, 1, workspace, 1
+# bind = $mod, 2, workspace, 2
+# bind = $mod, 3, workspace, 3
+# bind = $mod, 4, workspace, 4
+# bind = $mod, 5, workspace, 5
+# bind = $mod, 6, workspace, 6
+# bind = $mod, 7, workspace, 7
+# bind = $mod, 8, workspace, 8
+# bind = $mod, 9, workspace, 9
+# bind = $mod, 0, workspace, 10
+# 
+# bind = $mod SHIFT, 1, movetoworkspacesilent, 1
+# bind = $mod SHIFT, 2, movetoworkspacesilent, 2
+# bind = $mod SHIFT, 3, movetoworkspacesilent, 3
+# bind = $mod SHIFT, 4, movetoworkspacesilent, 4
+# bind = $mod SHIFT, 5, movetoworkspacesilent, 5
+# bind = $mod SHIFT, 6, movetoworkspacesilent, 6
+# bind = $mod SHIFT, 7, movetoworkspacesilent, 7
+# bind = $mod SHIFT, 8, movetoworkspacesilent, 8
+# bind = $mod SHIFT, 9, movetoworkspacesilent, 9
+# bind = $mod SHIFT, 0, movetoworkspacesilent, 10
+
 bind = $mod, plus, workspace, 1
 bind = $mod, bracketleft, workspace, 2
 bind = $mod, braceleft, workspace, 3
@@ -206,15 +228,15 @@ submap=reset
 # ------------------------------------------------------------------------------
 #                       Special workspaces (Scratchpads)
 # ------------------------------------------------------------------------------
-bind = $mod, backslash, exec, [workspace special:scratch]tm startup scratch
-bindr = $mod, backslash, togglespecialworkspace, scratch
+bind = $mod, t, exec, [workspace special:scratch]tm startup scratch
+bindr = $mod, t, togglespecialworkspace, scratch
 
-bind = $mod SHIFT, backslash, exec, [noanim; workspace special:browser]firefox-scratch
-bindr = $mod SHIFT, backslash, togglespecialworkspace, browser
+bind = $mod SHIFT, t, exec, [noanim; workspace special:browser]firefox-scratch
+bindr = $mod SHIFT, t, togglespecialworkspace, browser
 
 # bind = $mod CONTROL, backslash, exec , [workspace special:ask]tm startup ask
-bind = $mod CONTROL, backslash, exec, [noanim; workspace special:ask]firefox-scratch ask
-bindr = $mod CONTROL, backslash, togglespecialworkspace, ask
+bind = $mod CONTROL, t, exec, [noanim; workspace special:ask]firefox-scratch ask
+bindr = $mod CONTROL, t, togglespecialworkspace, ask
 # ==============================================================================
 
 # ------------------------------------------------------------------------------
@@ -232,6 +254,7 @@ bind = ,XF86AudioPlay, exec, playerctl play-pause
 # Move/resize windows with mod + LMB/RMB and dragging
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
+bind = , mouse:275, exec, modremap
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
