--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -6,12 +6,12 @@ monitor = ,preferred,2560x0,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = code-dvorak,us
-    kb_variant =
-    kb_model =
+    kb_layout = code,code-dvorak
+    kb_variant=
+    kb_model=
     # https://gist.github.com/jatcwang/ae3b7019f219b8cdc6798329108c9aee
-    kb_options = caps:escape,ctrl:menu_rctrl
-    kb_rules =
+    kb_options=
+    kb_rules=
 
     follow_mouse = 1
 
@@ -27,6 +27,11 @@ input {
             middle_button_emulation = yes
             clickfinger_behavior = yes
     }
+}
+
+device:microsoft-microsoft®-2.4ghz-transceiver-v9.0 {
+    kb_layout = code-dvorak,us
+    kb_options = caps:escape,ctrl:menu_rctrl
 }
 
 device:microsoft-microsoft®-2.4ghz-transceiver-v9.0-mouse {
