hypr: restore old scratch keybinds

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -228,15 +228,15 @@ submap=reset
 # ------------------------------------------------------------------------------
 #                       Special workspaces (Scratchpads)
 # ------------------------------------------------------------------------------
-bind = $mod, t, exec, [workspace special:scratch]tm startup scratch
-bindr = $mod, t, togglespecialworkspace, scratch
+bind = $mod, backslash, exec, [workspace special:scratch]tm startup scratch
+bindr = $mod, backslash, togglespecialworkspace, scratch
 
-bind = $mod SHIFT, t, exec, [noanim; workspace special:browser]firefox-scratch
-bindr = $mod SHIFT, t, togglespecialworkspace, browser
+bind = $mod SHIFT, backslash, exec, [noanim; workspace special:browser]firefox-scratch
+bindr = $mod SHIFT, backslash, togglespecialworkspace, browser
 
 # bind = $mod CONTROL, backslash, exec , [workspace special:ask]tm startup ask
-bind = $mod CONTROL, t, exec, [noanim; workspace special:ask]firefox-scratch ask
-bindr = $mod CONTROL, t, togglespecialworkspace, ask
+bind = $mod CONTROL, backslash, exec, [noanim; workspace special:ask]firefox-scratch ask
+bindr = $mod CONTROL, backslash, togglespecialworkspace, ask
 # ==============================================================================
 
 # ------------------------------------------------------------------------------
