--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -111,6 +111,7 @@ bind-key w kill-pane
 
 # custom commands
 bind-key Enter display-popup -E "tm"
+bind-key Space display-popup -E "tm"
 bind-key t run-shell "toggle-term"
 bind-key N new-window -d -n jn "tmux send-keys -t jn 'jupyter notebook' Enter;zsh"
 bind-key ? run-shell "tmux-ask"
