kbd: swap # and &

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -34,7 +34,7 @@ bind=,plus,exec,brightness set 10
 bind=,bracketleft,exec,brightness set 20
 bind=,braceleft,exec,brightness set 30
 bind=,parenleft,exec,brightness set 40
-bind=,ampersand,exec,brightness set 50
+bind=,numbersign,exec,brightness set 50
 bind=,equal,exec,brightness set 60
 bind=,parenright,exec,brightness set 70
 bind=,braceright,exec,brightness set 80
@@ -45,7 +45,7 @@ bind=,plus,submap,reset
 bind=,bracketleft,submap,reset
 bind=,braceleft,submap,reset
 bind=,parenleft,submap,reset
-bind=,ampersand,submap,reset
+bind=,numbersign,submap,reset
 bind=,equal,submap,reset
 bind=,parenright,submap,reset
 bind=,braceright,submap,reset
@@ -173,7 +173,7 @@ bind = $mod, plus, workspace, 1
 bind = $mod, bracketleft, workspace, 2
 bind = $mod, braceleft, workspace, 3
 bind = $mod, parenleft, workspace, 4
-bind = $mod, ampersand, workspace, 5
+bind = $mod, numbersign, workspace, 5
 bind = $mod, equal, workspace, 6
 bind = $mod, parenright, workspace, 7
 bind = $mod, braceright, workspace, 8
@@ -184,7 +184,7 @@ bind = $mod SHIFT, plus, movetoworkspacesilent, 1
 bind = $mod SHIFT, bracketleft, movetoworkspacesilent, 2
 bind = $mod SHIFT, braceleft, movetoworkspacesilent, 3
 bind = $mod SHIFT, parenleft, movetoworkspacesilent, 4
-bind = $mod SHIFT, ampersand, movetoworkspacesilent, 5
+bind = $mod SHIFT, numbersign, movetoworkspacesilent, 5
 bind = $mod SHIFT, equal, movetoworkspacesilent, 6
 bind = $mod SHIFT, parenright, movetoworkspacesilent, 7
 bind = $mod SHIFT, braceright, movetoworkspacesilent, 8
