--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -94,7 +94,7 @@ bind-key "+" select-window -t 1
 bind-key "[" select-window -t 2
 bind-key "{" select-window -t 3
 bind-key "(" select-window -t 4
-bind-key "&" select-window -t 5
+bind-key "#" select-window -t 5
 bind-key "=" select-window -t 6
 bind-key ")" select-window -t 7
 bind-key "}" select-window -t 8
@@ -120,7 +120,7 @@ bind-key . run-shell "tmux display-popup -E cfgdirs --tmux"
 bind-key > run-shell "tmux display-popup -E cfgdirs --tmux --file"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && .lg)"
 bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
-bind-key BSpace run-shell "[[ $(wmctrl -l | rg $(xprop -root _NET_ACTIVE_WINDOW | awk '{print $5}' | sed 's/0x//') | awk '{print $4}') == 'scratch' ]] && tm attach scratch || tm attach main; tm kill $(tmux display-message -p '#S')"
+# bind-key BSpace run-shell "[[ $(wmctrl -l | rg $(xprop -root _NET_ACTIVE_WINDOW | awk '{print $5}' | sed 's/0x//') | awk '{print $4}') == 'scratch' ]] && tm attach scratch || tm attach main; tm kill $(tmux display-message -p '#S')"
 bind-key \\ switch-client -l
 
 # toggle status bar
