hypr: remap caps->esc on laptop

--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -29,6 +29,11 @@ input {
     }
 }
 
+device:at-translated-set-2-keyboard {
+    kb_layout = code,code-dvorak
+    kb_options = caps:escape
+}
+
 device:microsoft-microsoft®-2.4ghz-transceiver-v9.0 {
     kb_layout = code-dvorak,us
     kb_options = caps:escape,ctrl:menu_rctrl
